glx/testdata/invalid/assertion-participant-invalid-person/archive.glx
# Invalid: participant.person references non-existent person
# This should fail validation - broken reference

events:
  event-marriage:
    type: marriage

sources:
  source-cert:
    title: "Certificate"

citations:
  citation-cert:
    source: source-cert

# This is INVALID - person-nonexistent does not exist
assertions:
  assertion-invalid:
    subject: event-marriage
    participant:
      person: person-nonexistent  # ERROR: this person doesn't exist
      role: groom
    citations:
      - citation-cert
    confidence: high

